# qmk_firmware

./: .antigh.toml  .ccls  .clang-format  .clang_complete  .clangd  .dccache  .dir-locals.el  .directory  .editorconfig  .envrc  .favorites.json  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.json  .namespace  .swn  .swo  .tool-versions  .travis.yml  .vscodec_cpp_properties.json  1-setup-path-win.bat  120K.txt  2-setup-environment-win.bat  2022-12-20 08-46-29.txt  404.html  50-qmk.rules  5keys.json  5keys_default.hex  =  ADB.txt  AGENTS.md  All Keyboards.code-workspace  BFO-9000 JL First.json  BUILD_GUIDE.md  Becoming-a-QMK-Collaborator.md  Build-Environment-Setup.md  Build-Options.org  CLAUDE.md  (+573 more)
nix/: pyproject.toml  sources.json
quantum/: CMakeLists.txt  IS31FL3731_driver.c  IS31FL3731_driver.h  action.c  action.h  action_code.h  action_layer.c  action_layer.h  action_macro.c  action_tapping.c  action_tapping.h  action_util.c  action_util.h  analog.h  api.c  api.h  audio.c  audio.h  autocorrect.c  autocorrect.h  avr_full_port_address_defs.text  avr_portaddress_defs.h  basic_profiling.h  beeps.c  beeps.h  bits.h  bitwise.c  bitwise.h  caps_word.c  caps_word.h  color.c  color.h  command.c  command.h  compiler_support.h  config_common.h  crc.c  crc.h  custom_modified_values.h  debounce.c  (+193 more)
quantum/api/: api_sysex.c  api_sysex.h
quantum/audio/: audio.c  audio.h  audio_arm.c  audio_arm.h  audio_avr.c  audio_avr_pwm.c  audio_avr_pwm.h  audio_chibios.c  audio_chibios_dac.c  audio_chibios_dac.h  audio_chibios_dac_basic.c  audio_chibios_pwm.c  audio_chibios_pwm.h  audio_pwm.c  driver_avr_pwm_hardware.c  driver_chibios_dac.h  driver_chibios_dac_additive.c  driver_chibios_dac_basic.c  driver_chibios_pwm.h  driver_chibios_pwm_hardware.c  driver_chibios_pwm_software.c  frequency_lut.h  keymap.c - Shortcut.lnk  luts.c  luts.h  mandy - Shortcut.lnk  muse.c  muse.h  musical_notes.h  song_list.h  vibrato_lut.h  voices.c  voices.h  wave.h  wavetable.h
quantum/backlight/: backlight.c  backlight.h  backlight_arm.c  backlight_avr.c  backlight_chibios.c  backlight_driver_common.c  backlight_driver_common.h  backlight_soft.c  backlight_software.c  backlight_timer.c
quantum/battery/: battery.c  battery.h
quantum/bootmagic/: bootmagic.c  bootmagic.h  bootmagic_full.c  bootmagic_full.h  bootmagic_lite.c  bootmagic_lite.h  magic.c  magic.h
quantum/connection/: connection.c  connection.h
quantum/debounce/: asym_eager_defer_pk.c  debounce_eager_pk.c  debounce_sym_g.c  eager_pk.c  eager_pr.c  none.c  readme.md  sym_defer_g.c  sym_defer_pk.c  sym_defer_pr.c  sym_eager_pk.c  sym_eager_pr.c  sym_g.c  sym_pk.c
quantum/hotp/: hotp.c  hotp.h
quantum/keycode_cache/: keycode_cache_mock.c  keycode_cache_mock.h  keycode_cache_tests.cpp
quantum/keymap_extras/: keymap_HomeRowMod.h  keymap_belgian.h  keymap_belgian_osx.h  keymap_bepo.h  keymap_br_abnt2.h  keymap_brazilian_abnt2.h  keymap_canadian_french.h  keymap_canadian_multilingual.h  keymap_colemak.h  keymap_contributions.h  keymap_croatian.h  keymap_cyrillic.h  keymap_czech.h  keymap_czech_mac_ansi.h  keymap_czech_mac_iso.h  keymap_danish.h  keymap_danish_osx_iso.h  keymap_dvorak.h  keymap_dvorak_fr.h  keymap_dvorak_programmer.h  keymap_dvp.h  keymap_ergol.h  keymap_estonian.h  keymap_eurkey.h  keymap_farsi.h  keymap_finnish.h  keymap_fr_ch.h  keymap_french.h  keymap_french_afnor.h  keymap_french_mac_iso.h  keymap_french_osx.h  keymap_german.h  keymap_german_ch.h  keymap_german_mac_iso.h  keymap_german_osx.h  keymap_greek.h  keymap_hebrew.h  keymap_hungarian.h  keymap_icelandic.h  keymap_irish.h  (+126 more)
quantum/lamparray/: lamparray.c  lamparray.h  lamparray_rgb_matrix.c  lamparray_surface.h
quantum/leaders/: press_state.c  press_state.h
quantum/led_matrix/: led_matrix.c  led_matrix.h  led_matrix_drivers.c  led_matrix_drivers.h  led_matrix_legacy_enables.h  led_matrix_types.h  lighting_map.h  post_config.h
quantum/led_matrix_animations/: alpha_mods_anim.h  band_anim.h  band_pinwheel_anim.h  band_spiral_anim.h  breathing_anim.h  cycle_left_right_anim.h  cycle_out_in_anim.h  cycle_up_down_anim.h  disable_all_led_matrix.h  dual_beacon_anim.h  led_matrix_effects.inc  solid_reactive_cross.h  solid_reactive_nexus.h  solid_reactive_simple_anim.h  solid_reactive_wide.h  solid_splash_anim.h  wave_left_right_anim.h  wave_up_down_anim.h
quantum/led_matrix_runners/: effect_runner_dx_dy_dist.h  effect_runner_i.h
quantum/logging/: CMakeLists.txt  debug.c  debug.h  lib_printf.c  lib_printf.h  lib_printf.mk  print.c  print.h  print.mk  rtt.mk  sendchar.c  sendchar.h  sendchar_console.c  sendchar_rtt.c  sendchar_uart.c
quantum/midi/: midi.c  midi_device.c  midi_device.h  qmk_midi.c  qmk_midi.h  sysex_tools.c
quantum/nvm/: nvm_dynamic_keymap.h  nvm_eeconfig.h  nvm_via.h  readme.md  rules.mk
quantum/painter/: qff.c  qff.h  qgf.c  qgf.h  qp.c  qp.h  qp_comms.c  qp_comms.h  qp_draw.h  qp_draw_circle.c  qp_draw_codec.c  qp_draw_core.c  qp_draw_ellipse.c  qp_draw_image.c  qp_draw_text.c  qp_internal.c  qp_internal.h  qp_internal_driver.h  qp_internal_formats.h  qp_stream.c  qp_stream.h  qp_utils.c  qp_utils.h  rules.mk
quantum/pointing_device/: pointing_device.c  pointing_device.h  pointing_device_auto_mouse.c  pointing_device_auto_mouse.h  pointing_device_dragscroll.c  pointing_device_dragscroll.h  pointing_device_drivers.c  pointing_device_gestures.c  pointing_device_gestures.h  pointing_device_modes.c  pointing_device_modes.h  rules.mk
quantum/process_keycode/: autocorrect_data_default.h  process_achordion.c  process_achordion.h  process_adaptive_keys.c  process_adaptive_keys.h  process_audio.c  process_audio.h  process_auto_mod.c  process_auto_mod.h  process_auto_shift.c  process_auto_shift.h  process_autocorrect.c  process_autocorrect.h  process_backlight.c  process_backlight.h  process_backspace_delete.c  process_backspace_pipe.c  process_backspace_pipe.h  process_bsp_del.c  process_bsp_del.h  process_caps_word.c  process_caps_word.h  process_chording.c  process_chording.h  process_clicky.c  process_clicky.h  process_combo.c  (+110 more)
(+108718 files in other folders)
