# This file should be kept in sync with requirements.txt and requirements-dev.txt
# It is particularly required by the Nix environment (see shell.nix). To update versions,
# normally one would run "poetry update --lock"
[tool.poetry]
name = "qmk_firmware"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "*"
argcomplete = "*"
colorama = "*"
hid = "*"
hjson = "*"
jsonschema = ">=3"
milc = ">=1.4.2"
Pygments = "*"
pyusb = "*"
qmk-dotty-dict = "*"

# This dependency is not mentioned in requirements.txt (QMK CLI is not a
# library package that is required by the Python code in qmk_firmware), but is
# required to build a proper nix-shell environment.
qmk = "*"

[tool.poetry.dev-dependencies]
nose2 = "*"
flake8 = "*"
pep8-naming = "*"
yapf = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
